<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xtdar.app.view.activity.MainActivity">
    <!--<item android:id="@+id/action_settings" android:nickName="@string/action_settings"-->
    <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item
        android:id="@+id/MenuItemExample"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never"
        android:title="@string/menu_title_example" />

    <item
        android:id="@+id/CustomToastMenuItem"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never"
        android:title="@string/CustomToastMenuItem" />
    <item
        android:id="@+id/btn_Notification"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="never"
        android:title="@string/btn_Notification" />
    <item
        android:id="@+id/dialog"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="ifRoom"
        android:title="@string/dialog" />

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        android:title="搜索条" />


    <group android:id="@+id/gitem" />
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="输入框例子" />
    <item
        android:id="@+id/menu_wallaper"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="intent传值" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="搜索" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/star_big_on"
        android:title="系统设置" />
    <item
        android:id="@+id/home"
        android:icon="@android:drawable/sym_action_call"
        android:title="Home" />
    <group />
</menu>
