<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#f9f9f9"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/garyLine" />

    <!-- 底部导航 -->
    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/tab_layout_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:id="@+id/ll"
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/tab_img_home"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/tab_text_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_img_home"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/home"
                        android:textColor="#abadbb"
                        android:textSize="12dp" />

                </RelativeLayout>

                <com.xtdar.app.view.widget.DragPointView
                    android:id="@+id/seal_num"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="19dp"
                    android:layout_toRightOf="@id/ll"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            </FrameLayout>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tab_layout_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/tab_img_shop"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/tab_text_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_img_shop"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/shop"
                        android:textColor="#abadbb"
                        android:textSize="12dp" />

                </RelativeLayout>

                <com.xtdar.app.view.widget.DragPointView
                    android:id="@+id/seal_num2"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="19dp"
                    android:layout_toRightOf="@id/ll"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            </FrameLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginBottom="20dp"
            android:padding="2dp">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <RelativeLayout
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/tab_img_discovery"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/tab_text_discovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_img_discovery"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/discovery"
                        android:textColor="#abadbb"
                        android:textSize="12dp" />

                </RelativeLayout>

                <com.xtdar.app.view.widget.DragPointView
                    android:id="@+id/seal_num33"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="19dp"
                    android:layout_toRightOf="@id/ll"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />

            </FrameLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tab_layout_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingTop="5dp"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">
                <RelativeLayout
                    android:paddingTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/tab_img_me"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerHorizontal="true"
                        android:background="#ffffff"
                        android:focusable="false"
                        android:scaleType="centerInside" />
                    <TextView
                        android:id="@+id/tab_text_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_img_me"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2.2dp"
                        android:text="@string/me"
                        android:textColor="#abadbb"
                        android:textSize="12dp" />
                </RelativeLayout>


                <ImageView
                    android:id="@+id/mine_red"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/tab_img_me"
                    android:background="@drawable/red_dot"
                    android:visibility="gone" />

            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>